Minor View Changes

--- a/OnlineMovieBooking/Views/Bookings/Index.cshtml
+++ b/OnlineMovieBooking/Views/Bookings/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Bookings List</h2>
+<h2>Bookings Lists</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
