added additional controllers from old proj try to solve errors in some of its views

--- a/OnlineMovieBooking/Views/UserMovie/Index.cshtml
+++ b/OnlineMovieBooking/Views/UserMovie/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.Movie>
+﻿@model OnlineMovieBooking.ViewModels.MovieViewModel
 
 @{
-    ViewBag.Title = "Movies";
+    ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+
 </p>
 <table class="table">
     <tr>
