--- a/OnlineMovieBooking/Views/UserMovieSelection/SelectCity.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/SelectCity.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.City>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.CityViewModel>
 
 @{
     Layout = null;
