BookingController reference changed

--- a/OnlineMovieBooking/Views/Bookings/Delete.cshtml
+++ b/OnlineMovieBooking/Views/Bookings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineMovieBooking.Models.Booking
+﻿@model OnlineMovieBooking.ViewModels.BookingViewModel
 
 @{
     ViewBag.Title = "Delete";
