--- a/OnlineMovieBooking/Views/Bookings/Index.cshtml
+++ b/OnlineMovieBooking/Views/Bookings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.Booking>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.BookingViewModel>
 
 @{
     ViewBag.Title = "Index";
