cinemahalls views done

--- a/OnlineMovieBooking/Views/CinemaHalls/Index.cshtml
+++ b/OnlineMovieBooking/Views/CinemaHalls/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.CinemaHall>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.CinemaHallViewModel>
 
 @{
     ViewBag.Title = "Index";
