--- a/OnlineMovieBooking/Views/CinemaHalls/Edit.cshtml
+++ b/OnlineMovieBooking/Views/CinemaHalls/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineMovieBooking.Models.CinemaHall
+﻿@model OnlineMovieBooking.ViewModels.CinemaHallViewModel
 
 @{
     ViewBag.Title = "Edit";
