Changed the showseatqueryservice

--- a/OnlineMovieBooking/Views/ShowSeats/Delete.cshtml
+++ b/OnlineMovieBooking/Views/ShowSeats/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineMovieBooking.Models.ShowSeat
+﻿@model OnlineMovieBooking.ViewModels.ShowSeatViewModel
 
 @{
     ViewBag.Title = "Delete";
