--- a/OnlineMovieBooking/Views/ShowSeats/Index.cshtml
+++ b/OnlineMovieBooking/Views/ShowSeats/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.ShowSeat>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.ShowSeatViewModel>
 
 @{
     ViewBag.Title = "Index";
