--- a/OnlineMovieBooking/Views/Users/Index.cshtml
+++ b/OnlineMovieBooking/Views/Users/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.User>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.UserViewModel>
 
 @{
     ViewBag.Title = "Index";
