done with cinemas controller and views

--- a/OnlineMovieBooking/Views/Cinemas/Delete.cshtml
+++ b/OnlineMovieBooking/Views/Cinemas/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineMovieBooking.Models.Cinema
+﻿@model OnlineMovieBooking.ViewModels.CinemaViewModel
 
 @{
     ViewBag.Title = "Delete";
