--- a/OnlineMovieBooking/Views/Cinemas/Index.cshtml
+++ b/OnlineMovieBooking/Views/Cinemas/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.Cinema>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.CinemaViewModel>
 
 @{
     ViewBag.Title = "Index";
