completed cinemaseatcontroller and its views

--- a/OnlineMovieBooking/Views/CinemaSeats/Delete.cshtml
+++ b/OnlineMovieBooking/Views/CinemaSeats/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model OnlineMovieBooking.Models.CinemaSeat
+﻿@model OnlineMovieBooking.ViewModels.CinemaSeatViewModel
 
 @{
     ViewBag.Title = "Delete";
