--- a/OnlineMovieBooking/Views/CinemaSeats/Index.cshtml
+++ b/OnlineMovieBooking/Views/CinemaSeats/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OnlineMovieBooking.Models.CinemaSeat>
+﻿@model IEnumerable<OnlineMovieBooking.ViewModels.CinemaSeatViewModel>
 
 @{
     ViewBag.Title = "Index";
