--- a/OnlineMovieBooking/Views/Movies/Create.cshtml
+++ b/OnlineMovieBooking/Views/Movies/Create.cshtml
@@ -1,16 +1,16 @@
-﻿@model OnlineMovieBooking.Models.Movie
+﻿@model OnlineMovieBooking.ViewModels.MovieViewModel
 
 @{
     ViewBag.Title = "Create";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Create Movie</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
