--- a/OnlineMovieBooking/Views/Movies/Delete.cshtml
+++ b/OnlineMovieBooking/Views/Movies/Delete.cshtml
@@ -1,9 +1,9 @@
-﻿@model OnlineMovieBooking.Models.Movie
+﻿@model OnlineMovieBooking.ViewModels.MovieViewModel
 
 @{
     ViewBag.Title = "Delete";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Delete Movie</h2>
 
 <h3>Are you sure you want to delete this Movie?</h3>
@@ -60,7 +60,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
