--- a/OnlineMovieBooking/Views/Movie/MovieInfo.cshtml
+++ b/OnlineMovieBooking/Views/Movie/MovieInfo.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@model OnlineMovieBooking.ViewModels.MovieViewModel
 @{
     ViewBag.Title = "MovieInfo";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -115,7 +116,7 @@
             <img src="~/movieinfo/movie1.jpg" />
         </div>
         <div class="column1">
-            <h2>Movie Name</h2>
+            <h2>@Html.DisplayFor(model => model.Name)</h2>
             <table>
                 <tr>
                     <th><h4>Release Date</h4></th>
