added layout page as well as done some minor chanes

--- a/OnlineMovieBooking/Views/ShowSeats/Delete.cshtml
+++ b/OnlineMovieBooking/Views/ShowSeats/Delete.cshtml
@@ -10,20 +10,12 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Booking.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Booking.Status)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CinemaSeat.SeatNumber)
+            @Html.DisplayNameFor(model=>model.ShowSeatId)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.CinemaSeat.SeatNumber)
+            @Html.DisplayFor(model=>model.ShowSeatId)
         </dd>
 
         <dt>
@@ -42,13 +34,6 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
 
     </dl>
 
