--- a/OnlineMovieBooking/Views/Shows/Details.cshtml
+++ b/OnlineMovieBooking/Views/Shows/Details.cshtml
@@ -1,9 +1,9 @@
-﻿@model OnlineMovieBooking.Models.Show
+﻿@model OnlineMovieBooking.ViewModels.ShowViewModel
 
 @{
     ViewBag.Title = "Details";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Show Details</h2>
 
 <div>
