--- a/OnlineMovieBooking/Views/CinemaHalls/Delete.cshtml
+++ b/OnlineMovieBooking/Views/CinemaHalls/Delete.cshtml
@@ -3,20 +3,13 @@
 @{
     ViewBag.Title = "Delete";
 }
+@Html.Partial("PartialAdminPanel")
+<h2>Delete (@Model.Name)</h2>
 
-<h2>Delete @Model.Cinema.Name-@Model.Cinema.City.Name (@Model.Name)</h2>
-
-<h3>Are you sure you want to delete @Model.Cinema.Name-@Model.Cinema.City.Name (@Model.Name)?</h3>
+<h3>Are you sure you want to delete (@Model.Name)?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Cinema.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Cinema.Name)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -26,17 +19,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalSeats)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalSeats)
-        </dd>
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
