--- a/OnlineMovieBooking/Views/CinemaHalls/Details.cshtml
+++ b/OnlineMovieBooking/Views/CinemaHalls/Details.cshtml
@@ -3,19 +3,13 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details @Model.Cinema.Name-@Model.Cinema.City.Name (@Model.Name)</h2>
+@Html.Partial("PartialAdminPanel")
+<h2>Details (@Model.Name)</h2>
 
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Cinema.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Cinema.Name)
-        </dd>
+        >
 
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -23,14 +17,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalSeats)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalSeats)
         </dd>
 
     </dl>
