--- a/OnlineMovieBooking/Views/CinemaHalls/Edit.cshtml
+++ b/OnlineMovieBooking/Views/CinemaHalls/Edit.cshtml
@@ -3,14 +3,14 @@
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit @Model.Cinema.Name-@Model.Cinema.City.Name (@Model.Name)</h2>
+@Html.Partial("PartialAdminPanel")
+<h2>Edit (@Model.Name)</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -21,22 +21,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalSeats, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalSeats, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TotalSeats, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CinemaId, "CinemaId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CinemaId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CinemaId, "", new { @class = "text-danger" })
             </div>
         </div>
 
