--- a/OnlineMovieBooking/Views/CinemaHalls/Index.cshtml
+++ b/OnlineMovieBooking/Views/CinemaHalls/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Index";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Cinema Hall List</h2>
 
 <p>
@@ -12,27 +12,14 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Cinema.Name)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalSeats)
-        </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Cinema.Name)-@Html.DisplayFor(modelItem => item.Cinema.City.Name)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalSeats)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CinemaHallId }) |
