--- a/OnlineMovieBooking/Views/Feedbacks/Delete.cshtml
+++ b/OnlineMovieBooking/Views/Feedbacks/Delete.cshtml
@@ -1,9 +1,9 @@
-﻿@model OnlineMovieBooking.Models.Feedback
+﻿@model OnlineMovieBooking.ViewModels.FeedbackViewModel
 
 @{
     ViewBag.Title = "Delete";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -28,14 +28,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Rating)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Rating)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Review)
         </dt>
 
@@ -45,7 +37,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
