--- a/OnlineMovieBooking/Views/ShowSeats/Delete.cshtml
+++ b/OnlineMovieBooking/Views/ShowSeats/Delete.cshtml
@@ -3,28 +3,13 @@
 @{
     ViewBag.Title = "Delete";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this Show Seat?</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Booking.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Booking.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CinemaSeat.SeatNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CinemaSeat.SeatNumber)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Show.ShowId)
@@ -42,17 +27,10 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
