--- a/OnlineMovieBooking/Views/ShowSeats/Details.cshtml
+++ b/OnlineMovieBooking/Views/ShowSeats/Details.cshtml
@@ -3,27 +3,12 @@
 @{
     ViewBag.Title = "Details";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Show Seat Details</h2>
 
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Booking.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Booking.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CinemaSeat.SeatNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CinemaSeat.SeatNumber)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Show.ShowId)
@@ -39,14 +24,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
         </dd>
 
     </dl>
