--- a/OnlineMovieBooking/Views/Shows/Create.cshtml
+++ b/OnlineMovieBooking/Views/Shows/Create.cshtml
@@ -1,16 +1,16 @@
-﻿@model OnlineMovieBooking.Models.Show
+﻿@model OnlineMovieBooking.ViewModels.ShowViewModel
 
 @{
     ViewBag.Title = "Create";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Create Shows</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
