--- a/OnlineMovieBooking/Views/Users/Create.cshtml
+++ b/OnlineMovieBooking/Views/Users/Create.cshtml
@@ -3,14 +3,14 @@
 @{
     ViewBag.Title = "Create";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Create User</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
