--- a/OnlineMovieBooking/Views/Users/Delete.cshtml
+++ b/OnlineMovieBooking/Views/Users/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Delete";
 }
-
+@Html.Partial("PartialAdminPanel")
 <h2>Delete User - @Model.Username</h2>
 
 <h3>Are you sure you want to delete user @Model.Username?</h3>
@@ -52,7 +52,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
