--- a/OnlineMovieBooking/Views/UserInterface/Index.cshtml
+++ b/OnlineMovieBooking/Views/UserInterface/Index.cshtml
@@ -1,8 +1,24 @@
-﻿
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    Layout = Layout;
 }
+<!DOCTYPE html>
 
-<h2>Welcome to MOVIEBOX]</h2>
-@Html.ActionLink("SignOut", "SignOut")
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Login</title>
+    <link href="~/Content/UserInterfaceStyle.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
 
+    <div class="container body-content">
+        <div class="login-div">
+            <H1>BOOK YOUR</H1>
+            <h2>TICKETS FOR MOVIES</h2>
+            <span>Safe,secure,reliable ticketing, Your ticket to live entertainment</span>
+        </div>
+    </div>
+
+
+</body>
+</html>
