fixed minor issues

--- a/OnlineMovieBooking/Views/Shows/Index.cshtml
+++ b/OnlineMovieBooking/Views/Shows/Index.cshtml
@@ -33,10 +33,10 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.CinemaHallId)
+                @Html.DisplayFor(modelItem => item.CinemaHall.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MovieId)
+                @Html.DisplayFor(modelItem => item.Movie.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
