feedback page working

--- a/OnlineMovieBooking/Views/Movie/Index.cshtml
+++ b/OnlineMovieBooking/Views/Movie/Index.cshtml
@@ -49,7 +49,9 @@
             <td>
 
                 @Html.ActionLink("Details", "Details", new { id = item.MovieId })
-                @Html.ActionLink("View FeedBack", "FeedBack", new { id = item.MovieId })
+                @Html.ActionLink("View FeedBack", "FeedBack", new { id = item.MovieId })|
+                @Html.ActionLink("Book Tickets","SelectShowByMovie", "UserMovieSelection", new { id = item.MovieId })
+
 
             </td>
         </tr>
