--- a/OnlineMovieBooking/Views/Movie/Details.cshtml
+++ b/OnlineMovieBooking/Views/Movie/Details.cshtml
@@ -1,68 +1,226 @@
 ﻿@model OnlineMovieBooking.ViewModels.MovieViewModel
-
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "MovieInfo";
+    Layout = "~/Views/Shared/_MovieLayout.cshtml";
 }
-
 <h2>Details</h2>
 
-<div>
-    <h4>MovieViewModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-       
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+<style>
+    body {
+        background-color: cadetblue;
+    }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Language)
-        </dt>
+    .row {
+        display: flex;
+    }
 
-        <dd>
-            @Html.DisplayFor(model => model.Language)
-        </dd>
+    .column {
+        float: left;
+        width: 33.3%;
+    }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Genre)
-        </dt>
+    .column1 {
+        text-align: center;
+    }
 
-        <dd>
-            @Html.DisplayFor(model => model.Genre)
-        </dd>
+    .column2 {
+        width: 20%;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+    }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Duration)
-        </dt>
+    .column3 {
+        width: 50%;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
 
-        <dd>
-            @Html.DisplayFor(model => model.Duration)
-        </dd>
+    .img1 {
+        width: 350px;
+        height: 300px;
+        border: 2px solid blue;
+    }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+    th {
+        padding: 30px 100px 10px;
+    }
 
-        <dd>
+    td {
+        padding: 10px 100px 10px;
+    }
+
+    .button-book {
+        margin-top: 50px;
+        padding: 15px;
+        background-color: crimson;
+        border-radius: 5px;
+        border: none;
+        color: white;
+    }
+
+    .abt-div {
+        margin-top: 30px;
+        margin-bottom: 10px;
+        border-top: 2px solid blue;
+        padding: 5px;
+    }
+
+    .abt-div1 {
+        margin-top: 30px;
+        margin-bottom: 50px;
+        border-top: 2px solid blue;
+        padding: 5px;
+    }
+
+    .fdbk-cntr {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .input1 {
+        margin-left: 300px;
+        padding: 25px 20px 25px;
+        border: 2px solid black;
+        outline: none;
+        border-radius: 5px;
+        text-align: left;
+        font-size: 16px;
+        background-color: cadetblue;
+        color: black;
+    }
+
+    .movie-watched {
+        margin-top: -10px;
+    }
+
+    .input2 {
+        background-color: cadetblue;
+        border: 2px solid black;
+    }
+</style>
+<
+    <div class="row">
+        <div class="column">
+    
+
+            <img src= @ViewBag.address />
+        </div>
+        <div class="column1">
+            <h2>@Html.DisplayFor(model => model.Name)</h2>
+            <table>
+                <tr>
+                    <th>Language</th>
+                    <th>@Html.DisplayNameFor(model => model.Genre)</th>
+                    <th><h4>Release Date</h4></th>
+                    <th><h4>Duration</h4></th>
+                </tr>
+                <tr>
+                    <td>@Html.DisplayFor(model => model.Language)</td>
+                    <td>@Html.DisplayFor(model => model.Genre)</td>
+                    <td><p>@Html.DisplayFor(model => model.ReleaseDate)</p></td>
+                    <td><p>@Html.DisplayFor(model => model.Duration)</p></td>
+                </tr>
+            </table>
+            <div class="column1">
+                <button class="button-book">Book Now</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="abt-div">
+        <h2>About Movie</h2>
+        <p>
             @Html.DisplayFor(model => model.Description)
-        </dd>
+        </p>
+    </div>
+    <div class="abt-div">
+        <h2>Cast</h2>
+        <div class="row">
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/cast/cast1.png" />
+                </p>
+            </div>
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/cast/cast2.png" />
+                </p>
+            </div>
+            <div class="column2">
+                <p>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ReleaseDate)
-        </dt>
+                    <img src="~/movieinfo/cast/cast3.png" />
+                </p>
+            </div>
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/cast/cast4.png" />
+                </p>
+            </div>
+            <div class="column2"><p>Cast 5</p></div>
+        </div>
+    </div>
+    <div class="abt-div">
+        <h2>Crew</h2>
+        <div class="row">
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/crew/crew1.png" />
+                </p>
+            </div>
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/crew/crew2.png" />
+                </p>
+            </div>
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/crew/crew3.png" />
+                </p>
+            </div>
+            <div class="column2">
+                <p>
+                    <img src="~/movieinfo/crew/crew4.png" />
+                </p>
+            </div>
+            <div class="column2"><p></p></div>
+        </div>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReleaseDate)
-        </dd>
+    <div class="abt-div1">
+        <h2 class="fdbk-cntr">Feedback</h2>
 
-    </dl>
-</div>
-<p>
-   
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+
+
+        <div class="row">
+            <div class="column3">
+
+                <div class="row">
+                    <div class="column3"><p class="movie-watched">Movie watched</p></div>
+                    <div class="column3"><input type="checkbox" name="" id="" class="input2"></div>
+                </div>
+
+
+                <div class="row">
+                    <div class="column3"><p>Ratings</p></div>
+                    <div class="column3"><p>&#9734;&#9734;&#9734;&#9734;&#9734;</p></div>
+                </div>
+
+
+            </div>
+            <div class="colunm3">
+                <input type="text" class="input1" value="Enter your feedback here">
+            </div>
+        </div>
+
+        <p>
+
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+    </div>
