--- a/OnlineMovieBooking/Views/UserMovieSelection/SelectShowByCinemaHall.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/SelectShowByCinemaHall.cshtml
@@ -2,11 +2,12 @@
 
 @{
     ViewBag.Title = "Select CinemaHall";
+    Layout = "~/Views/Shared/_MovieLayout.cshtml";
 }
 
-<h2>Select Cinema Hall</h2>
+<h2 class="text-center">Select Cinema Hall</h2>
 
 @foreach (var item in Model)
 {
-
+    
 }
