--- a/OnlineMovieBooking/Views/Movie/FeedBack.cshtml
+++ b/OnlineMovieBooking/Views/Movie/FeedBack.cshtml
@@ -7,15 +7,18 @@
 
 <h2>FeedBack</h2>
 
-
-<p>image</p>
 <hr />
 
-<table>
+<table class="table table-bordered">
+    <tr>
+        <th>Username</th>
+        <th>Review</th>
+    </tr>
     @foreach (var item in Model)
     {
+
         <tr>
-            <td>@Html.DisplayFor(modelItem => item.UserId)</td>
+            <td>@Html.DisplayFor(modelItem => item.User.Username)</td>
             <td>@Html.DisplayFor(modelItem => item.Review)</td>
         </tr>
     }
@@ -23,7 +26,7 @@
 
 
 <p>
-    @Html.ActionLink("Back to MovieInfo", "Index")
+    @Html.ActionLink("Back to MovieInfo", "Index") |
     @Html.ActionLink("Add Review", "AddFeedBack")
 </p>
 
