--- a/OnlineMovieBooking/Views/Movie/Index.cshtml
+++ b/OnlineMovieBooking/Views/Movie/Index.cshtml
@@ -48,8 +48,8 @@
             </td>
             <td>
 
-                @Html.ActionLink("Details", "Details", new { id = item.MovieId })
-                @Html.ActionLink("View FeedBack", "FeedBack", new { id = item.MovieId })|
+                @Html.ActionLink("Details", "Details", new { id = item.MovieId }) |
+                @Html.ActionLink("View FeedBack", "FeedBack", new { id = item.MovieId }) |
                 @Html.ActionLink("Book Tickets","SelectShowByMovie", "UserMovieSelection", new { id = item.MovieId })
 
 
