added user interface

--- a/OnlineMovieBooking/Views/Movie/Details.cshtml
+++ b/OnlineMovieBooking/Views/Movie/Details.cshtml
@@ -106,7 +106,7 @@
         <div class="column">
     
 
-            <img src= "@ViewBag.address" />
+            <img src= @ViewBag.address />
         </div>
         <div class="column1">
             <h2>@Html.DisplayFor(model => model.Name)</h2>
