--- a/OnlineMovieBooking/Views/UserMovieSelection/CinemaHall.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/CinemaHall.cshtml
@@ -31,7 +31,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.ActionLink("Select", "SelectShowByCinemaHall", new { id = item.CinemaHallId }) |
+                @Html.ActionLink("Select", "SelectShowByCinemaHall", new { id = item.CinemaHallId }) 
             </td>
         </tr>
     }
