--- a/OnlineMovieBooking/Views/Movies/Index.cshtml
+++ b/OnlineMovieBooking/Views/Movies/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<OnlineMovieBooking.ViewModels.MovieViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Movies List";
 }
 @Html.Partial("PartialAdminPanel")
 <h2>Movie List</h2>
