--- a/OnlineMovieBooking/Views/Shared/_Layout.cshtml
+++ b/OnlineMovieBooking/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title-MovieBox</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </div>
-    
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
