--- a/OnlineMovieBooking/Views/UserMovieSelection/GetNonReserved.cshtml
+++ b/OnlineMovieBooking/Views/UserMovieSelection/GetNonReserved.cshtml
@@ -23,7 +23,7 @@
         <th></th>
     </tr>
 
- 
+
 
     @foreach (var item in Model)
     {
@@ -38,9 +38,10 @@
                 @Html.DisplayFor(modelItem => item.ShowId)
             </td>
             <td>
+                @Html.ActionLink("select", "SelectSeat", new { id = item.ShowSeatId })
             </td>
         </tr>
     }
-    @Html.ActionLink("Select Seat","GetNonReserved")
 
 </table>
+
